--- a/Project/signup.html
+++ b/Project/signup.html
@@ -123,6 +123,7 @@
                   type="password"
                   class="form-control form-control-lg bg-dark"
                   placeholder="Password"
+				  required
                 />
               </div>
               <div class="form-group">
