--- a/Project/index.html
+++ b/Project/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
@@ -71,12 +71,13 @@
           -->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a href="/getall" class="nav-link bg-dark text-white">Data Dump</a>
+            </li>
+			<li class="nav-item">
               <a href="signin.html" class="nav-link  text-white">Sign In</a>
             </li>
             <li class="nav-item">
-              <a href="signup.html" class="nav-link bg-dark text-white"
-                >Sign Up</a
-              >
+              <a href="signup.html" class="nav-link bg-dark text-white">Sign Up</a>
             </li>
           </ul>
         </div>
