--- a/Project/signup.html
+++ b/Project/signup.html
@@ -93,6 +93,7 @@
               <div class="form-group">
                 <input
                   type="text"
+				  name="firstName"
                   class="form-control form-control-lg bg-dark"
                   placeholder="First Name"
                 />
@@ -100,6 +101,7 @@
               <div class="form-group">
                 <input
                   type="email"
+				  name="lastName"
                   class="form-control form-control-lg bg-dark"
                   placeholder="Last Name"
                 />
