--- a/backend/index.html
+++ b/backend/index.html
@@ -70,6 +70,9 @@
             ml-auto: pushes the navbars to the right
           -->
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="getall" class="nav-link bg-dark text-white">Data Dump</a>
+            </li>
 			<li class="nav-item">
               <a href="signin.html" class="nav-link  text-white">Sign In</a>
             </li>
