--- a/backend/signin.html
+++ b/backend/signin.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Icon Title -->
-    <title>rSed Food Delivery</title>
+    <title>OmNom Food Delivery</title>
 
     <!-- rSed Title Icon -->
     <link rel="icon" href="img\rSedLogo.png" type="image/icon type" />
