--- a/backend/index.html
+++ b/backend/index.html
@@ -19,13 +19,13 @@
       crossorigin="anonymous"
     />
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="public/css/style.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="img\rSedLogo.png" type="public/image/icon type" />
+    <link rel="icon" href="img\rSedLogo.png" type="/image/icon type" />
   </head>
 
   <!-- Body -->
