--- a/backend/index.html
+++ b/backend/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="public/css/style.css"/>
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
