--- a/Project/signin.html
+++ b/Project/signin.html
@@ -35,64 +35,78 @@
       bg-danger: red background
       fixed-top: bar fixed to top --- remove??
      -->
-    <nav class="navbar navbar-expand-sm bg-danger navbar-dark" id="main-nav">
-      <!-- 
-        create a container class: follows a grid system of 12 columns across the page
-      -->
-      <div class="container">
-        <!-- 
-          a: defines a hyperlink
-          href: hypertext reference          
-          navbar-brand: brand of company
-          clicking rSedFoodDelivery sends back to index.html        
-        -->
-        <a href="index.html" class="navbar-brand">rSed Food Delivery</a>
-        <!-- 
-          makes a button appear to expand the navbar if screen is too small
-        -->
-        <button
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+     <nav
+     class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top"
+     id="main-nav"
+   >
+     <!-- 
+       create a container class: follows a grid system of 12 columns across the page
+     -->
+     <div class="container col align-self-start">
+       <!-- 
+         a: defines a hyperlink
+         href: hypertext reference          
+         navbar-brand: brand of company
+         clicking rSedFoodDelivery sends back to index.html        
+       -->   
+       <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
+     </span>
+       <!-- 
+         makes a button appear to expand the navbar if screen is too small
+       -->
+       <button
+         class="navbar-toggler"
+         data-toggle="collapse"
+         data-target="#navbarCollapse"
+       >
+         <span class="navbar-toggler-icon"></span>
+       </button>
 
-        <!-- 
-          collapse navbar-collapse: replaces the navigation on small screens with a button
-        -->
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <!-- 
-            navbar-nav: full-height and lightweight navigation
-            ml-auto: pushes the navbars to the right
-          -->
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="signin.html" class="nav-link  text-white">Sign In</a>
-            </li>
-            <li class="nav-item">
-              <a href="signup.html" class="nav-link bg-white text-dark"
-                >Sign Up</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+       <!-- 
+         collapse navbar-collapse: replaces the navigation on small screens with a button
+       -->
+       <div class="collapse navbar-collapse" id="navbarCollapse">
+         <!-- 
+           navbar-nav: full-height and lightweight navigation
+           ml-auto: pushes the navbars to the right
+         -->
+         <ul class="navbar-nav ml-auto">
+           <li class="nav-item bg-dark">
+             <a class="btn btn-outline-light" href="/getall" role="button"
+               >Data Dump</a
+             >
+           </li>
+           <li class="nav-item">
+             <a
+               class="btn btn-outline-light mx-3"
+               href="signin.html"
+               role="button"
+               >Sign In</a
+             >
+           </li>
+           <li class="nav-item">
+             <a class="btn btn-outline-light" href="signup.html" role="button"
+               >Sign Up</a
+             >
+           </li>
+         </ul>
+       </div>
+     </div>
+   </nav>
 
     <header id="sign-in">
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center" style ="margin-top: 100px">
         <div class="card bg-danger text-center card-form">
           <div class="card-body">
-            <h3>Sign In</h3>
-            <h4>
-              New to OmNom Foods? <a href="signup.html" class="text-dark">Sign Up</a>
+            <h3 style="color: #ffd700">Sign In</h3>
+            <h4 style="color: #ffd700">
+              New to OmNom Foods? <a href="signup.html" class="text-white"><u>Sign Up</u></a>
             </h4>
             <form>           
               <div class="form-group">
                 <input
                   type="email"
-                  class="form-control form-control-lg bg-dark"
+                  class="form-control form-control-lg"
                   placeholder="Email"
                 />
               </div>
@@ -100,7 +114,7 @@
               <div class="form-group">
                 <input
                   type="password"
-                  class="form-control form-control-lg bg-dark"
+                  class="form-control form-control-lg"
                   placeholder="Password"
                 />
               </div>
@@ -122,7 +136,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center py-2">
-            <h3>Ready Software Engineering Design</h3>
+            <h3 style="color: #ffd700">Ready Software Engineering Design</h3>
             <button
               class="btn btn-danger"
               onclick="window.location.href = 'https://sites.google.com/view/rsed/'"
