--- a/backend/index.html
+++ b/backend/index.html
@@ -128,7 +128,7 @@
               >
                 Delivering food from <strong>ALL</strong> of your favorite
                 resturants,
-                <strong>GUARAN-FUCKING-DICK!</strong>
+                <strong>GUARANTEED!</strong>
               </h2>
             </div>
           </div>
