--- a/backend/index.html
+++ b/backend/index.html
@@ -20,7 +20,7 @@
     />
 
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
