--- a/backend/signup.html
+++ b/backend/signup.html
@@ -110,14 +110,16 @@
 				  name="firstName"
                   class="form-control form-control-lg"
                   placeholder="First Name"
+				  required
                 />
               </div>
               <div class="form-group">
                 <input
-                  type="email"
+                  type="text"
 				  name="lastName"
                   class="form-control form-control-lg"
                   placeholder="Last Name"
+				  required
                 />
               </div>
               <div class="form-group">
@@ -125,6 +127,7 @@
                   type="email"
                   class="form-control form-control-lg"
                   placeholder="Email"
+				  required
                 />
               </div>
               <div class="form-group">
@@ -132,6 +135,7 @@
                   type="text"
                   class="form-control form-control-lg"
                   placeholder="Phone Number"
+				  required
                 />
               </div>
               <div class="form-group">
@@ -147,6 +151,7 @@
                   type="password"
                   class="form-control form-control-lg"
                   placeholder="Confirm Password"
+				  required
                 />
               </div>
               <input
