--- a/backend/index.html
+++ b/backend/index.html
@@ -20,7 +20,7 @@
     />
 
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="public\css\style.css" />
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
@@ -50,7 +50,7 @@
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-        <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
+        <a href="index.html"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
 
         <!-- 
           makes a button appear to expand the navbar if screen is too small
