--- a/backend/signup.html
+++ b/backend/signup.html
@@ -19,13 +19,13 @@
       crossorigin="anonymous"
     />
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Icon Title -->
     <title>rSed Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
+    <link rel="icon" href="img\rSedLogo.png" type="image/icon type" />
   </head>
 
   <!-- Body -->
@@ -49,7 +49,7 @@
          navbar-brand: brand of company
          clicking rSedFoodDelivery sends back to index.html        
        -->
-       <a href="index.html"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
+       <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
      </span>
        <!-- 
          makes a button appear to expand the navbar if screen is too small
@@ -110,16 +110,14 @@
 				  name="firstName"
                   class="form-control form-control-lg"
                   placeholder="First Name"
-				  required
                 />
               </div>
               <div class="form-group">
                 <input
-                  type="text"
+                  type="email"
 				  name="lastName"
                   class="form-control form-control-lg"
                   placeholder="Last Name"
-				  required
                 />
               </div>
               <div class="form-group">
@@ -127,7 +125,6 @@
                   type="email"
                   class="form-control form-control-lg"
                   placeholder="Email"
-				  required
                 />
               </div>
               <div class="form-group">
@@ -135,7 +132,6 @@
                   type="text"
                   class="form-control form-control-lg"
                   placeholder="Phone Number"
-				  required
                 />
               </div>
               <div class="form-group">
@@ -151,7 +147,6 @@
                   type="password"
                   class="form-control form-control-lg"
                   placeholder="Confirm Password"
-				  required
                 />
               </div>
               <input
