--- a/backend/signin.html
+++ b/backend/signin.html
@@ -21,13 +21,13 @@
       crossorigin="anonymous"
     />
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
 
     <!-- Icon Title -->
     <title>rSed Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="img\rSedLogo.png" type="image/icon type" />
+    <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
   </head>
 
   <!-- Body -->
@@ -51,7 +51,7 @@
          navbar-brand: brand of company
          clicking rSedFoodDelivery sends back to index.html        
        -->   
-       <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
+       <a href="index.html"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
      </span>
        <!-- 
          makes a button appear to expand the navbar if screen is too small
