--- a/backend/preferences.html
+++ b/backend/preferences.html
@@ -20,13 +20,13 @@
     />
 
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="img\rSedLogo.png" type="image/icon type" />
+    <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
   </head>
 
   <!-- Body -->
@@ -50,7 +50,7 @@
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-        <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
+        <a href="index.html"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
 
         <!-- 
           makes a button appear to expand the navbar if screen is too small
