--- a/backend/signup.html
+++ b/backend/signup.html
@@ -72,7 +72,7 @@
          -->
          <ul class="navbar-nav ml-auto">
            <li class="nav-item bg-dark">
-             <a class="btn btn-outline-light" href="/getall" role="button"
+             <a class="btn btn-outline-light" href="/testingRoute" role="button"
                >Data Dump</a
              >
            </li>
