--- a/backend/signin.html
+++ b/backend/signin.html
@@ -84,6 +84,7 @@
           </h4>
           <form>
             <div id="signin" style="margin-top: 10px; margin-bottom: 10px; margin-left: 55px;"></div>
+
             <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
             <!-- The core Firebase JS SDK is always required and must be listed first -->
             <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
@@ -108,23 +109,36 @@
               firebase.initializeApp(firebaseConfig);
               firebase.analytics();
 
-              function onSuccess(googleUser) {
-                console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+              // function onSuccess(googleUser) {
+              //   console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+              // }
+              // function onFailure(error) {
+              //   console.log(error);
+              // }
+              function renderButton(){
+                googleSignIn();
               }
-              function onFailure(error) {
-                console.log(error);
+              googleSignIn = () => {
+                base_provider = new firebase.auth.GoogleAuthProvider()
+                firebase.auth().signInWithPopUp(base_provider).then(function(result){
+                  console.log(result)
+                  console.log("Successfully linked Google Account")
+                }).catch(function(err){
+                  console.log(err)
+                  consol.log("Failed to link")
+                })
               }
-              function renderButton() {
-                gapi.signin2.render('signin', {
-                  'scope': 'profile email',
-                  'width': 240,
-                  'height': 50,
-                  'longtitle': true,
-                  'theme': 'dark',
-                  'onsuccess': onSuccess,
-                  'onfailure': onFailure
-                });
-              }
+              // function renderButton() {
+              //   gapi.signin2.render('signin', {
+              //     'scope': 'profile email',
+              //     'width': 240,
+              //     'height': 50,
+              //     'longtitle': true,
+              //     'theme': 'dark',
+              //     'onsuccess': onSuccess,
+              //     'onfailure': onFailure
+              //   });
+              // }
             </script>
             <div class="form-group">
               <input type="email" class="form-control form-control-lg" placeholder="Email" />
