--- a/backend/signin.html
+++ b/backend/signin.html
@@ -120,7 +120,7 @@
               
               googleSignIn = () => {
                 base_provider = new firebase.auth.GoogleAuthProvider()
-                firebase.auth().signInWithPopUp(base_provider).then(function(result){
+                firebase.auth().signInWithPopup(base_provider).then(function(result){
                   console.log(result)
                   console.log("Successfully linked Google Account")
                 }).catch(function(err){
