--- a/backend/signin.html
+++ b/backend/signin.html
@@ -85,7 +85,7 @@
           <form>
             <div id="signin" style="margin-top: 10px; margin-bottom: 10px; margin-left: 55px;"></div>
 
-            <button onclick="googleSignIn()">Google Sign In</button>
+            <button onclick = "googleSignIn()">Google Sign In</button>
 
             <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
             <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -119,7 +119,7 @@
               // }
               
               googleSignIn = () => {
-                base_provider = new firebase.auth.GoogleAuthProvider()
+                base_provider = new Firebase.auth.GoogleAuthProvider()
                 firebase.auth().signInWithPopup(base_provider).then(function(result){
                   console.log(result)
                   console.log("Successfully linked Google Account")
