--- a/backend/signin.html
+++ b/backend/signin.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+   <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
+   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
   <!-- Fancy Fonts, Icons, and Logos -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
@@ -87,13 +90,9 @@
 
             <button onclick = "googleSignIn()">Google Sign In</button>
 
-            <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-            <!-- The core Firebase JS SDK is always required and must be listed first -->
-            <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
-
             <!-- TODO: Add SDKs for Firebase products that you want to use
              https://firebase.google.com/docs/web/setup#available-libraries -->
-            <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-analytics.js"></script>
+            <!-- <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-analytics.js"></script> -->
 
             <script>
               // Your web app's Firebase configuration
