--- a/backend/signin.html
+++ b/backend/signin.html
@@ -9,6 +9,8 @@
    <!-- The core Firebase JS SDK is always required and must be listed first -->
    <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+   <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-analytics.js"></script>
+
 
   <!-- Fancy Fonts, Icons, and Logos -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
@@ -92,7 +94,6 @@
 
             <!-- TODO: Add SDKs for Firebase products that you want to use
              https://firebase.google.com/docs/web/setup#available-libraries -->
-            <!-- <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-analytics.js"></script> -->
 
             <script>
               // Your web app's Firebase configuration
