--- a/backend/signin.html
+++ b/backend/signin.html
@@ -98,19 +98,19 @@
 
             <script>
               // Your web app's Firebase configuration
-              var firebaseConfig = {
-                apiKey: "AIzaSyCHXyio4R9BAW-QZWKCY6HqTficreXgMyc",
-                authDomain: "omnom-foods.firebaseapp.com",
-                databaseURL: "https://omnom-foods.firebaseio.com",
-                projectId: "omnom-foods",
-                storageBucket: "omnom-foods.appspot.com",
-                messagingSenderId: "487556244866",
-                appId: "1:487556244866:web:ed424c5e7dd358c63a5b9b",
-                measurementId: "G-D9WL7J4VB3"
-              };
-              // Initialize Firebase
-              firebase.initializeApp(firebaseConfig);
-              firebase.analytics();
+              // var firebaseConfig = {
+              //   apiKey: "AIzaSyCHXyio4R9BAW-QZWKCY6HqTficreXgMyc",
+              //   authDomain: "omnom-foods.firebaseapp.com",
+              //   databaseURL: "https://omnom-foods.firebaseio.com",
+              //   projectId: "omnom-foods",
+              //   storageBucket: "omnom-foods.appspot.com",
+              //   messagingSenderId: "487556244866",
+              //   appId: "1:487556244866:web:ed424c5e7dd358c63a5b9b",
+              //   measurementId: "G-D9WL7J4VB3"
+              // };
+              // // Initialize Firebase
+              // firebase.initializeApp(firebaseConfig);
+              // firebase.analytics();
 
               function onSuccess(googleUser) {
                 console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
@@ -118,17 +118,6 @@
               function onFailure(error) {
                 console.log(error);
               }
-              
-              // function googleSignIn () {
-              //   var provider = new firebase.auth.GoogleAuthProvider();
-              //   firebase.auth().signInWithPopup(base_provider).then(function(result){
-              //     console.log(result);
-              //     console.log("Successfully linked Google Account")
-              //   }).catch(function(err){
-              //     console.log(err)
-              //     consol.log("Failed to link")
-              //   })
-              // }
               function renderButton() {
                 gapi.signin2.render('signin', {
                   'scope': 'profile email',
@@ -140,6 +129,17 @@
                   'onfailure': onFailure
                 });
               }
+              // function googleSignIn () {
+              //   var provider = new firebase.auth.GoogleAuthProvider();
+              //   firebase.auth().signInWithPopup(base_provider).then(function(result){
+              //     console.log(result);
+              //     console.log("Successfully linked Google Account")
+              //   }).catch(function(err){
+              //     console.log(err)
+              //     consol.log("Failed to link")
+              //   })
+              // }
+              
             </script>
             <div class="form-group">
               <input type="email" class="form-control form-control-lg" placeholder="Email" />
