--- a/backend/signin.html
+++ b/backend/signin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="487556244866-69lnspq55lsqk6mo1fg44a3sgachf1rd.apps.googleusercontent.com.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
   <!-- Fancy Fonts, Icons, and Logos -->
