--- a/backend/signup.html
+++ b/backend/signup.html
@@ -107,6 +107,7 @@
               <div class="form-group">
                 <input
                   type="text"
+				  id="firstName"
 				  name="firstName"
                   class="form-control form-control-lg"
                   placeholder="First Name"
@@ -114,7 +115,8 @@
               </div>
               <div class="form-group">
                 <input
-                  type="email"
+                  type="text"
+				  id="lastName"
 				  name="lastName"
                   class="form-control form-control-lg"
                   placeholder="Last Name"
@@ -123,6 +125,7 @@
               <div class="form-group">
                 <input
                   type="email"
+				  id="email"
                   class="form-control form-control-lg"
                   placeholder="Email"
                 />
@@ -130,6 +133,7 @@
               <div class="form-group">
                 <input
                   type="text"
+				  id="phoneNumber"
                   class="form-control form-control-lg"
                   placeholder="Phone Number"
                 />
@@ -137,6 +141,7 @@
               <div class="form-group">
                 <input
                   type="password"
+				  id="password"
                   class="form-control form-control-lg"
                   placeholder="Password"
 				  required
@@ -145,6 +150,7 @@
               <div class="form-group">
                 <input
                   type="password"
+				  id="password"
                   class="form-control form-control-lg"
                   placeholder="Confirm Password"
                 />
