--- a/backend/preferences.html
+++ b/backend/preferences.html
@@ -20,7 +20,7 @@
     />
 
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="public/css/profile.css" />
 
     <!-- Icon Title -->
     <title>OmNom Food Delivery</title>
@@ -73,7 +73,7 @@
           -->
           <ul class="navbar-nav ml-auto">
             <li class="nav-item bg-dark">
-              <a class="btn btn-outline-light" href="/getall" role="button"
+              <a class="btn btn-outline-light" href="/testingRoute" role="button"
                 >Data Dump</a
               >
             </li>
@@ -90,12 +90,88 @@
                 >Sign Up</a
               >
             </li>
+			<li class="nav-item">
+              <a
+                class="btn btn-outline-light mx-3"
+                href="profile.html"
+                role="button"
+                >Profile</a
+              >
+            </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    
+    <header id="profile-section">
+      <div class="shamelessly-copied-dark-overlay">
+        <div class="profile-inner-thing container">
+		  <h4>
+			<b>Pick your favorite.</b>
+		  </h4>
+		  <br>
+		  <div style="display: flex">
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+			    <b>American</b>
+			  </div>
+		    </div>
+		    <pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Italian</b>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Vietnamese</b>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Thai</b>
+			  </div>
+		    </div>
+		  </div>
+		  <br>
+		  <div style="display: flex">
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+			    <b>Indian</b>
+			  </div>
+		    </div>
+		    <pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Breakfast</b>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Vietnamese</b>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card" style="width:25%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+				<b>Thai</b>
+			  </div>
+		    </div>
+		  </div>
+        </div>
+      </div>
+    </header>
 
     <!-- FOOTER -->
     <footer id="main-footer" class="bg-dark">
