baby profile again

--- a/backend/preferences.html
+++ b/backend/preferences.html
@@ -106,69 +106,91 @@
     <header id="profile-section">
       <div class="shamelessly-copied-dark-overlay">
         <div class="profile-inner-thing container">
-		  <h4>
-			<b>Pick your favorite.</b>
-		  </h4>
+		  <h4><b>Why don't you try one of these?</b></h4>
 		  <br>
 		  <div style="display: flex">
-			<div class="card" style="width:25%">
+			<div class="card" style="width:20%">
 			  <img src="public\img\placeholder.png">
 			  <div class="container">
-			    <b>American</b>
+			    <b>Tim's Burger Joint</b><br><i>American</i>
 			  </div>
 		    </div>
 		    <pre> </pre>
-			<div class="card" style="width:25%">
+			<div class="card" style="width:20%">
 			  <img src="public\img\placeholder.png">
 			  <div class="container">
-				<b>Italian</b>
+			    <b>Restaurant 2</b><br><i>Italian</i>
 			  </div>
 		    </div>
 			<pre> </pre>
-			<div class="card" style="width:25%">
+			<div class="card" style="width:20%">
 			  <img src="public\img\placeholder.png">
 			  <div class="container">
-				<b>Vietnamese</b>
+			    <b>Restaurant 3</b><br><i>Thai</i>
 			  </div>
 		    </div>
 			<pre> </pre>
-			<div class="card" style="width:25%">
+			<div class="card" style="width:20%">
 			  <img src="public\img\placeholder.png">
 			  <div class="container">
-				<b>Thai</b>
+			    <b>Restaurant 4</b><br><i>Vietnamese</i>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card" style="width:20%">
+			  <img src="public\img\placeholder.png">
+			  <div class="container">
+			    <b>Restaurant 5</b><br><i>Indian</i>
 			  </div>
 		    </div>
 		  </div>
 		  <br>
+		  <br>
+		  <h4><b>Or if they don't suit you, you can also pick a type and go from there!</b></h4>
 		  <div style="display: flex">
-			<div class="card" style="width:25%">
-			  <img src="public\img\placeholder.png">
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
 			  <div class="container">
-			    <b>Indian</b>
-			  </div>
-		    </div>
-		    <pre> </pre>
-			<div class="card" style="width:25%">
-			  <img src="public\img\placeholder.png">
-			  <div class="container">
-				<b>Breakfast</b>
+			    <i>American</i>
 			  </div>
 		    </div>
 			<pre> </pre>
-			<div class="card" style="width:25%">
-			  <img src="public\img\placeholder.png">
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
 			  <div class="container">
-				<b>Vietnamese</b>
+			    <i>American</i>
 			  </div>
 		    </div>
 			<pre> </pre>
-			<div class="card" style="width:25%">
-			  <img src="public\img\placeholder.png">
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
 			  <div class="container">
-				<b>Thai</b>
+			    <i>American</i>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
+			  <div class="container">
+			    <i>American</i>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
+			  <div class="container">
+			    <i>American</i>
+			  </div>
+		    </div>
+			<pre> </pre>
+			<div class="card">
+			  <img src="public\img\placeholder.png" width="150px" height="100px">
+			  <div class="container">
+			    <i>American</i>
 			  </div>
 		    </div>
 		  </div>
+		  
         </div>
       </div>
     </header>
@@ -190,4 +212,5 @@
       </div>
     </footer>
   </body>
+</html>
 </html>
