--- a/Project/index.html
+++ b/Project/index.html
@@ -50,8 +50,16 @@
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-        <a href="index.html"> <img src="img\rSedLogo.png" class="w-25"/></a>
-
+        <a href="index.html" style="text-decoration: none">
+          <div
+            class="col font-weight-bold"
+            href="signin.html"
+            style="text-align: left; color: white"
+          >
+            <img src="img\rSedLogo.png" style="width: 45px; height: 45px" />
+            OmNom Food Delivery
+          </div></a
+        >
         <!-- 
           makes a button appear to expand the navbar if screen is too small
         -->
@@ -71,12 +79,14 @@
             navbar-nav: full-height and lightweight navigation
             ml-auto: pushes the navbars to the right
           -->
+
           <ul class="navbar-nav ml-auto">
+            <!--
             <li class="nav-item bg-dark">
               <a class="btn btn-outline-light" href="/getall" role="button"
                 >Data Dump</a
               >
-            </li>
+            </li>-->
             <li class="nav-item">
               <a
                 class="btn btn-outline-light mx-3"
@@ -100,12 +110,11 @@
         <div class="home-inner container">
           <div class="row">
             <div class="d-lg-block">
-              <h1
-                class="display-1 text-lg-center text-danger mb-3 font-weight-bold"
-              >
-                OmNom Food Delivery
+              <h1 class="display-4 text-center">
+                Delivering food from <strong>ALL</strong> of your favorite
+                resturants,
+                <strong>GUARANTEED!</strong>
               </h1>
-
               <form
                 class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
               >
@@ -121,15 +130,6 @@
                   Search for Noms
                 </button>
               </form>
-
-              <h2
-                class="display-4 text-lg-center font-weight-bold"
-                style="color: #ffd700"
-              >
-                Delivering food from <strong>ALL</strong> of your favorite
-                resturants,
-                <strong>GUARAN-FUCKING-DICK!</strong>
-              </h2>
             </div>
           </div>
         </div>
@@ -139,15 +139,51 @@
     <!-- FOOTER -->
     <footer id="main-footer" class="bg-dark">
       <div class="container">
-        <div class="row">
-          <div class="col text-center py-2">
-            <h3 style="color: #ffd700">Ready Software Engineering Design</h3>
-            <button
-              class="btn btn-danger"
-              onclick="window.location.href = 'https://sites.google.com/view/rsed/'"
-            >
-              Check Out Our Website!
-            </button>
+        <div class="row-sm-2 row-md-8 row-lg-10 row-xl-14">
+          <div class="col-sm-2 col-md-8 col-lg-10 col-xl-14 text-center py-2">            
+            <div class="row" style="padding-top: 10px; padding-bottom: 15px">
+              <div class="col font-weight-bold" style="font-size: 20px">
+                Get to Know Us
+              </div>
+              <div class="col font-weight-bold" style="font-size: 20px">
+                Let Us Help You
+              </div>
+
+              <div class="w-100" style="padding-top: 5px"></div>
+              <div class="col">
+                <a
+                  href="https://sites.google.com/view/rsed/"
+                  style="color: white;"
+                  >About Us</a
+                >
+              </div>
+              <div class="col">
+                <a href="#" style="color: white;">Account Details</a>
+              </div>
+            </div>
+            <div class="row" style="padding-bottom: 15px">
+              <a href="index.html">
+                <img src="img\rSedLogo.png" style="width: 30px; height: 30px" />
+              </a>
+              <a href="#" style="color:grey">
+                <span class="mr-3" style="padding-left: 15px; font-size: 12px;"
+                  >Terms of Service</span
+                >
+              </a>
+              <a href="#" style="color:grey">
+                <span class="mr-3" style="font-size: 12px;">Privacy</span>
+              </a>
+              <a href="#" style="color:grey">
+                <span class="mr-3" style="font-size: 12px;"
+                  >Delivery Locations</span
+                >
+              </a>
+              <a style="color:grey">
+                <span class="mr-3" style="font-size: 12px;"
+                  >&#169 2020 rSed</span
+                >
+              </a>
+            </div>
           </div>
         </div>
       </div>
