--- a/backend/signup.html
+++ b/backend/signup.html
@@ -81,27 +81,28 @@
             Already Have an Account?
             <a href="signin.html" class="text-white"><u>Sign In</u></a>
           </h4>
-          <form method="POST" action="/adduser">
+          <form method="POST" action="/adduser" oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
+            >
             <div class="form-group">
-              <input type="text" id="firstName" name="firstName" class="form-control form-control-lg"
+              <input type="text" name="firstName" class="form-control form-control-lg"
                 placeholder="First Name" />
             </div>
             <div class="form-group">
-              <input type="text" id="lastName" name="lastName" class="form-control form-control-lg"
+              <input type="text" name="lastName" class="form-control form-control-lg"
                 placeholder="Last Name" />
             </div>
             <div class="form-group">
-              <input type="email" id="email" class="form-control form-control-lg" placeholder="Email" />
+              <input type="email" class="form-control form-control-lg" placeholder="Email" />
             </div>
             <div class="form-group">
-              <input type="text" id="phoneNumber" class="form-control form-control-lg" placeholder="Phone Number" />
+              <input type="text" name="phone"class="form-control form-control-lg" placeholder="Phone Number" />
             </div>
             <div class="form-group">
-              <input type="password" id="password" class="form-control form-control-lg" placeholder="Password"
+              <input type="password" name="password" class="form-control form-control-lg" placeholder="Password"
                 required />
             </div>
             <div class="form-group">
-              <input type="password" id="password" class="form-control form-control-lg"
+              <input type="password" name="password2" class="form-control form-control-lg"
                 placeholder="Confirm Password" />
             </div>
             <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
