--- a/backend/signup.html
+++ b/backend/signup.html
@@ -81,21 +81,21 @@
             Already Have an Account?
             <a href="signin.html" class="text-white"><u>Sign In</u></a>
           </h4>
-          <form method="POST" action="/adduser" oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
-            >
+          <form method="POST" action="/adduser"
+            oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
             <div class="form-group">
-              <input type="text" name="firstName" class="form-control form-control-lg"
-                placeholder="First Name" />
+              <input type="text" name="firstName" class="form-control form-control-lg" placeholder="First Name"
+                required />
             </div>
             <div class="form-group">
-              <input type="text" name="lastName" class="form-control form-control-lg"
-                placeholder="Last Name" />
+              <input type="text" name="lastName" class="form-control form-control-lg" placeholder="Last Name"
+                required />
             </div>
             <div class="form-group">
-              <input type="email" class="form-control form-control-lg" placeholder="Email" />
+              <input type="email" name="email" class="form-control form-control-lg" placeholder="Email" required />
             </div>
             <div class="form-group">
-              <input type="text" name="phone"class="form-control form-control-lg" placeholder="Phone Number" />
+              <input type="text" name="phone" class="form-control form-control-lg" placeholder="Phone Number" />
             </div>
             <div class="form-group">
               <input type="password" name="password" class="form-control form-control-lg" placeholder="Password"
@@ -103,7 +103,7 @@
             </div>
             <div class="form-group">
               <input type="password" name="password2" class="form-control form-control-lg"
-                placeholder="Confirm Password" />
+                placeholder="Confirm Password" required/>
             </div>
             <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
           </form>
