--- a/backend/index.html
+++ b/backend/index.html
@@ -50,7 +50,7 @@
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-        <a href="index.html"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
+        <a href="/"> <img src="public\img\rSedLogo.png" class="w-25"/></a>
 
         <!-- 
           makes a button appear to expand the navbar if screen is too small
