--- a/Project/signin.html
+++ b/Project/signin.html
@@ -83,9 +83,17 @@
                class="btn btn-outline-light mx-3"
                href="signin.html"
                role="button"
-               >Sign In</a
+               >Login</a
              >
            </li>
+           <li class="nav-item">
+            <a
+              class="btn btn-outline-light mx-3"
+              href="signin.html"
+              role="button"
+              >Logout</a
+            >
+          </li>
            <li class="nav-item">
              <a class="btn btn-outline-light" href="signup.html" role="button"
                >Sign Up</a
