--- a/Project/index.html
+++ b/Project/index.html
@@ -89,12 +89,20 @@
             </li>-->
             <li class="nav-item">
               <a
-                class="btn btn-outline-light mx-3"
+                class="btn btn-outline-light mx-0"
                 href="signin.html"
                 role="button"
-                >Sign In</a
+                >Login</a
               >
             </li>
+            <li class="nav-item">
+            <a
+              class="btn btn-outline-light mx-3"
+              href="signin.html"
+              role="button"
+              >Logout</a
+            >
+          </li>
             <li class="nav-item">
               <a class="btn btn-outline-light" href="signup.html" role="button"
                 >Sign Up</a
