--- a/Project/preferences.html
+++ b/Project/preferences.html
@@ -82,7 +82,7 @@
                 class="btn btn-outline-light mx-3"
                 href="signin.html"
                 role="button"
-                >Sign In</a
+                >Login</a
               >
             </li>
             <li class="nav-item">
